- lbxproxy/configure.ac: Add XTRANS_CONNECTION_FLAGS so lbxtransport.c     builds - proxymngr/Makefile.am: Replace $< with portable construct - lbxproxy/configure.ac: - proxymngr/configure.ac: - xfwp/configure.ac: Add xproxymngproto to PKG_CHECK_MODULES

--- a/Makefile.am
+++ b/Makefile.am
@@ -48,7 +48,7 @@ configdir = $(CONFIG_DIR)
 config_DATA = pmconfig
 
 pmconfig: pmconfig.cpp
-	$(SED) -e s/LBXPROXY/`echo @LBXPROXY@ | sed -e s/\\\\//\\\\\\\\\\\\//g`/ < $< > $@
+	$(SED) -e s/LBXPROXY/`echo @LBXPROXY@ | sed -e s/\\\\//\\\\\\\\\\\\//g`/ < $(srcdir)/pmconfig.cpp > $@
 
 EXTRA_DIST = pmconfig.cpp
 CLEANFILES = pmconfig
