--- a/configure.ac
+++ b/configure.ac
@@ -45,7 +45,7 @@ if [[ -z $SED ]] ; then
 fi
 
 # Checks for pkg-config packages
-PKG_CHECK_MODULES(DEP, ice xt x11)
+PKG_CHECK_MODULES(DEP, ice xt x11 xproxymngproto)
 AC_SUBST(DEP_CFLAGS)
 AC_SUBST(DEP_LIBS)
 
