Install man pages to section 1 instead of section m (Patch from Donnie     Berkholz)

--- a/Makefile.am
+++ b/Makefile.am
@@ -41,7 +41,7 @@ proxymngr_SOURCES =	\
         pmint.h \
         PMproto.h
 
-dist_man_MANS = \
+dist_man1_MANS = \
         proxymngr.man
 
 configdir = $(CONFIG_DIR)
