Partial clean up of symlink.sh script Remove dup protocol files in     app/proxymngr (found during symlink.sh cleanup)

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,9 +37,7 @@ proxymngr_SOURCES =	\
         main.c \
         pmdb.c \
         pmdb.h \
-        PM.h \
-        pmint.h \
-        PMproto.h
+        pmint.h
 
 dist_man1_MANS = \
         proxymngr.man
