--- a/Makefile.am
+++ b/Makefile.am
@@ -53,7 +53,7 @@ CLEANFILES = pmconfig
 
 appmandir =  $(mandir)/man$(APP_MAN_SUFFIX)
 
-appman_DATA = $(appman_SOURCES:man=$(APP_MAN_SUFFIX))
+appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
 
 EXTRA_DIST += $(appman_SOURCES)
 CLEANFILES += $(appman_DATA)
