Another pass at .cvsignores for apps.

--- a/.cvsignore
+++ b/.cvsignore
@@ -4,14 +4,17 @@ Makefile.in
 aclocal.m4
 autom4te.cache
 compile
-config.h
-config.h.in
+config.guess
 config.log
 config.status
+config.sub
 configure
 depcomp
 install-sh
 missing
 pmconfig
 proxymngr
+proxymngr.1
 stamp-h1
+xconfig.h
+xconfig.h.in
