--- a/Makefile.am
+++ b/Makefile.am
@@ -39,7 +39,7 @@ proxymngr_SOURCES =	\
         pmdb.h \
         pmint.h
 
-appman_SOURCES = \
+appman_PRE = \
         proxymngr.man
 
 configdir = $(CONFIG_DIR)
@@ -53,9 +53,9 @@ CLEANFILES = pmconfig
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
