config: Remove unnecessary calls from configure.ac
PKG_CONFIG_MODULES handles AC_SUBST of the CFLAGS & LIBS variables

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,6 +24,7 @@ bin_PROGRAMS = proxymngr
 CONFIG_DIR = $(libdir)/X11/proxymngr
 
 AM_CFLAGS =						\
+	$(CWARNFLAGS)					\
 	$(PROXYMNGR_CFLAGS)				\
 	-DXVENDORNAME=\"The\ X\.Org\ Foundation\"	\
 	-DXORG_RELEASE=\"Release\ $(VERSION)\"		\
