--- a/configure.ac
+++ b/configure.ac
@@ -22,7 +22,8 @@ dnl
 dnl Process this file with autoconf to create configure.
 
 AC_PREREQ([2.60])
-AC_INIT(proxymngr,[1.0.1], [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg],proxymngr)
+AC_INIT([proxymngr], [1.0.2],
+        [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg], [proxymngr])
 AM_INIT_AUTOMAKE([dist-bzip2])
 AM_MAINTAINER_MODE
 
