proxymngr depends on xproto, not x11 (Xlib)
proxymngr doesn't include any Xlib headers or call any Xlib functions
directly, but does include Xos.h, Xfuncs.h & Xmd.h from xproto.

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>

--- a/configure.ac
+++ b/configure.ac
@@ -45,7 +45,7 @@ if [[ -z $LBXPROXY ]] ; then
 fi
 
 # Checks for pkg-config packages
-PKG_CHECK_MODULES(PROXYMNGR, ice xt x11 xproxymngproto)
+PKG_CHECK_MODULES(PROXYMNGR, ice xt xproto xproxymngproto)
 
 AC_CHECK_FUNC(strcasecmp, [], 
 	AC_DEFINE([NEED_STRCASECMP],1,
