--- a/Makefile.am
+++ b/Makefile.am
@@ -47,7 +47,7 @@ configdir = $(CONFIG_DIR)
 config_DATA = pmconfig
 
 pmconfig: pmconfig.cpp
-	$(SED) -e s/LBXPROXY/`echo @LBXPROXY@ | sed -e s/\\\\//\\\\\\\\\\\\//g`/ < $(srcdir)/pmconfig.cpp > $@
+	$(AM_V_GEN)$(SED) -e s/LBXPROXY/`echo @LBXPROXY@ | sed -e s/\\\\//\\\\\\\\\\\\//g`/ < $(srcdir)/pmconfig.cpp > $@
 
 EXTRA_DIST = pmconfig.cpp
 CLEANFILES = pmconfig
