--- a/Makefile.am
+++ b/Makefile.am
@@ -59,6 +59,9 @@ appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
+# String replacements in MAN_SUBSTS now come from xorg-macros.m4 via configure
+MAN_SUBSTS += -e 's|__configdir__|$(CONFIG_DIR)|g'
+
 SUFFIXES = .$(APP_MAN_SUFFIX) .man
 
 # String replacements in MAN_SUBSTS now come from xorg-macros.m4 via configure
