--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@
 
 bin_PROGRAMS = proxymngr
 
-CONFIG_DIR = $(libdir)/X11/proxymngr
+CONFIG_DIR = $(sysconfdir)/X11/proxymngr
 
 AM_CFLAGS =						\
 	$(CWARNFLAGS)					\
